--- a/android/app/src/main/res/drawable-v21/launch_background.xml
+++ b/android/app/src/main/res/drawable-v21/launch_background.xml
@@ -11,9 +11,19 @@
     </item>
 
 
-     <item>
+     <!-- <item>
         <bitmap
             android:gravity="center"
             android:src="@drawable/logo" />
-   </item>
+   </item> -->
+
+    
+        <item
+            android:width="200dp"
+            android:height="200dp"
+            android:drawable="@drawable/logo"
+            android:gravity="center"/>
+            
+       
+  
 </layer-list>
